test/lit/pto/tpush_tpop_frontend_slot_num_invalid.pto
// RUN: not ptoas --pto-arch=a3 %s 2>&1 | FileCheck %s

module {
  func.func @cube_kernel(%gm_slot_buffer: !pto.ptr<f32>)
      attributes {pto.kernel_kind = #pto.kernel_kind<cube>} {
    %c0_i32 = arith.constant 0 : i32
    pto.aic_initialize_pipe {id = 0, dir_mask = 1, slot_size = 1024, slot_num = 0}
      (gm_slot_buffer = %gm_slot_buffer : !pto.ptr<f32>,
       c2v_consumer_buf = %c0_i32 : i32,
       v2c_consumer_buf = %c0_i32 : i32)
    return
  }
}

// CHECK: error: 'pto.aic_initialize_pipe' op expects 'slot_num' to be greater than 0
